# balsaq

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
macros/: Cargo.toml
macros/src/: derive_column.rs  expand_group.rs  expand_schema.rs  expand_table.rs  lib.rs
macros/src/snapshots/: balsaq_macros__derive_column__tests__enum_check_constraint_contains_discriminants.snap  balsaq_macros__derive_column__tests__enum_generates_all_three_impls.snap  balsaq_macros__derive_column__tests__enum_implicit_discriminants.snap  balsaq_macros__derive_column__tests__newtype_generates_to_sql_and_from_sql.snap  balsaq_macros__derive_column__tests__newtype_inner_type_used_in_from_sql.snap  balsaq_macros__expand_group__tests__all_columns_checked_for_null.snap  balsaq_macros__expand_group__tests__always_emits_all_four_methods.snap  balsaq_macros__expand_group__tests__generates_placeholder_constants.snap  balsaq_macros__expand_schema__tests__multiple_tables_all_appear_in_schema.snap  balsaq_macros__expand_schema__tests__non_table_items_are_passed_through.snap  balsaq_macros__expand_schema__tests__single_table_generates_schema.snap  balsaq_macros__expand_table__tests__compound_pk_generates_tuple_type_and_get.snap  balsaq_macros__expand_table__tests__group_field.snap  balsaq_macros__expand_table__tests__group_optional_field.snap  balsaq_macros__expand_table__tests__multi_column_index_generated.snap  balsaq_macros__expand_table__tests__no_pk_generates_infallible.snap  balsaq_macros__expand_table__tests__primary_key_annotation.snap  (+6 more)
src/: lib.rs
tests/: roundtrip.rs
(+41 files in other folders)
