[workspace]
members = ["macros"]

[package]
name = "balsaq"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
description = "Proc-macro library that eliminates rusqlite boilerplate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hurryabit/balsaq"
keywords = ["rusqlite", "sqlite", "database", "orm", "proc-macro"]
categories = ["database", "development-tools::procedural-macro-implementations"]

[dependencies]
balsaq-macros = { path = "macros" }
const_format = "0.2.36"
rusqlite = "0.39"

[dev-dependencies]
trybuild = "1"
