[package]
name = "balsaq-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for balsaq (internal crate)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hurryabit/balsaq"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
insta = "1"
prettyplease = "0.2"
